@@ -15,8 +15,8 @@ class Tips(commands.Cog, name='Other Commands'):
     async def awakening(self, interaction: discord.Interaction):
         '''Awakening cost chart'''
         embed=discord.Embed()
-        awakening = common.raw_asset_link_header + 'Bot/awakening_costs.png'
-        embed.set_image(url=awakening)
+        img = common.raw_asset_link_header + 'Bot/awakening_costs.png'
+        embed.set_image(url=img)
         await interaction.response.send_message(
             embed=embed
         )
@@ -25,8 +25,8 @@ class Tips(commands.Cog, name='Other Commands'):
     async def soulaffinity(self, interaction: discord.Interaction):
         '''Soul affinity chart'''
         embed=discord.Embed()
-        affinity = common.raw_asset_link_header + 'Bot/soul_affinity.jpg'
-        embed.set_image(url=affinity)
+        img = common.raw_asset_link_header + 'Bot/soul_affinity.jpg'
+        embed.set_image(url=img)
         await interaction.response.send_message(
             embed=embed
         )
@@ -35,8 +35,18 @@ class Tips(commands.Cog, name='Other Commands'):
     async def enhancecost(self, interaction: discord.Interaction):
         '''Equipment enhancement cost chart'''
         embed=discord.Embed()
-        enhance = common.raw_asset_link_header + 'Bot/enhance.png'
-        embed.set_image(url=enhance)
+        img = common.raw_asset_link_header + 'Bot/enhance.png'
+        embed.set_image(url=img)
+        await interaction.response.send_message(
+            embed=embed
+        )
+
+    @app_commands.command()
+    async def seteffect(self, interaction: discord.Interaction):
+        '''Equipment set effect chart'''
+        embed=discord.Embed()
+        img = common.raw_asset_link_header + 'Bot/seteffects.png'
+        embed.set_image(url=img)
         await interaction.response.send_message(
             embed=embed
         )
